# aihws-ali

./: .gitignore  README.md  pyproject.toml
data/raw/: description_variables.md
models/: features.json  metadata.json
notebooks/: ExamplePredictionDemo.ipynb  ExploringData.ipynb
src/: evaluate_final.py  evaluation_utils.py  experimental_testing.py  feature_importance_analysis.py  model_utils.py  predict_new_geotiffs.py  shap_analysis.py  train_models.py
