[project]
name = "aihws-ali"
version = "0.1.0"
description = "AI for Human Water Systems - Ali's implementation for Wildfire Detection and Prediction in California using Machine Learning"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "shap>=0.51.0",
    "numba>=0.62.0",
    "llvmlite>=0.45.0",
    "rasterio>=1.4.4",
    "geopandas>=1.1.3",
    "lightgbm>=4.6.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
managed = true
